<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhatsMenu</string>
    <string name="copyright">Copyright ⓒ 2020 WhatsMenu All rights reserved.</string>
    <string name="check_menu_name">Meal Plan IDs</string>
    <string name="input_menu_list">Meal Plan ID Login</string>
    <string name="introduction">Please enter meal plan ID or \nCheck meal plan IDs.</string>
    <string name="name">Meal Plan ID</string>
    <string name="menu_input_name">Menu Name</string>
    <string name="request_input_name">Enter meal plan ID</string>
    <string name="password">Plan Password</string>
    <string name="confirm_password">Confirm Plan Password</string>
    <string name="request_input_password">Enter Plan password</string>
    <string name="confirm">Confirm</string>
    <string name="no_such_data">There is no such meal plan ID!</string>
    <string name="please_input">Please fill out every form!</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="delete">DEL</string>
    <string name="search_menu">Search Meal Plan ID</string>
    <string name="already_data">This meal plan ID is already exist!</string>
    <string name="menu_name_added">Meal plan added successfully</string>
    <string name="menu_name_add_fail">Failed to add meal plan...</string>
    <string name="add_menu_name">Add Meal Plan</string>
    <string name="manager_password">Manager Password</string>
    <string name="confirm_manager_password">Confirm Manager Password</string>
    <string name="request_input_manager_password">Enter manager password</string>
    <string name="delete_menu_name">Delete Meal Plan</string>
    <string name="deleted_successfully">Deleted Successfully!</string>
    <string name="menu_name_delete_fail">Failed to delete meal plan...</string>
    <string name="menu_name_password_wrong">Plan ID or password is wrong</string>
    <string name="manager_password_wrong">Manager password is wrong</string>
    <string name="menu">Meal Plan</string>
    <string name="to_home">Go to home</string>
    <string name="switch_menu">Manager Page</string>
    <string name="switch_user">User Page</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>

    <string name="ask_breakfast_input">Please enter breakfast menu</string>
    <string name="ask_lunch_input">Please enter lunch menu</string>
    <string name="ask_dinner_input">Please enter dinner menu</string>

    <string name="menu1">- Menu 1</string>
    <string name="menu2">- Menu 2</string>
    <string name="menu3">- Menu 3</string>
    <string name="menu4">- Menu 4</string>
    <string name="menu5">- Menu 5</string>
    <string name="menu6">- Menu 6</string>

    <string name="save">Save</string>
    <string name="saved">Saved successfully</string>
    <string name="save_fail">Failed to save menu...</string>

    <string name="menu_name">Menu Name</string>

    <string name="manager_sign_in">Manager Sign In</string>

    <string name="confirm_password_wrong">Please check confirm password and confirm manager password</string>

    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <string name="ask">Click to ask anything!</string>

</resources>