<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/White">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/introduction"
                android:textColor="@color/Black"
                android:layout_marginTop="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_input_menu_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:elevation="5dp"
                android:text="@string/input_menu_list"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn_check_menu_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:elevation="5dp"
                android:text="@string/check_menu_name"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/tv_ask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ask"
                android:textColor="@color/linkBlue"
                android:layout_marginTop="15dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_copyright"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/copyright" />
        </LinearLayout>


    </LinearLayout>